--- a/templates/ola.html
+++ b/templates/ola.html
@@ -4,37 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
-    <style>
-        
-    ul{
-        list-style-type:none;
-    }
-    body {
-        display: flex;
-        background-color: aqua;
-        justify-content: center;
-        align-items: center;
-    }
-    </style>
 </head>
+
+
 <body>
-    <a href="https://naruto.fandom.com/pt-br/wiki/Wiki_Naruto" >Naruto</a>
-
-    <img src="static/minato.PNG">
-
-
-<h1>
-<ul>
-<li>Marcus</li>
-<li>Samara</li>
-<li>Rodrigo</li>
-<li>Yasmin</li>
-</ul>
-</h1>
-
-
+    {% for i in post %}
+    <h1> {{i.titulo}} </h1>
+    <h2> {{i.texto}} </h2>
+    <h3> {{i.data_criacao}} </h3>
+    {% endfor %}
 </body>
+
 </html>
 
 
